tests/errors/runtime.IntegerOperationOverflow.res
>> Runtime | File: runtime.IntegerOperationOverflow.art
     error | Line: 4
           | 
           | number operation overflow - up to 64-bit integers supported
           | attempted: mul
           | with: 1234567891234 2345678912345